--- a/style.css
+++ b/style.css
@@ -1,314 +1,225 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-:root {
-    --black: #000;
-    --white: #fff;
-    --blue: #4f46e5;
-    --darkgray: #1f2937;
-    --lightgray: #f3f4f6;
-}
-
 * {
     margin: 0;
     padding: 0;
+}
+
+body {
     font-family: "Fira Sans", sans-serif;
 }
 
-.container {
-    width: 100%;
-    /* min-height: 100vh; */
-    max-width: 70rem;
-    margin: 0 auto;
-    padding: 0 1.4rem;
-    box-sizing: border-box;
-    overflow: hidden;
-}
-
-.navbar {
-    width: 100%;
+/* Navbar */
+nav {
     display: flex;
     justify-content: space-between;
+    height: 100px;
     align-items: center;
+    padding: 0 23px;
+    max-width: 1050px;
+    margin: 0 auto;
 }
 
-.logo {
-    cursor: pointer;
-    margin: 33px 0;
+nav .logo {
     font-style: italic;
+    cursor: pointer;
 }
 
-.menu-icon {
-    width: 25px;
-    cursor: pointer;
-    display: none;
+nav .logo:hover {
+    color: darkslategray;
 }
 
 nav ul {
     display: flex;
-    align-items: center;
-}
-
-nav ul li {
     list-style: none;
-    margin-right: 30px;
+    width: 210px; /* 275px | 210px */
+    justify-content: space-between;
+    margin-right: 15px;
 }
 
 nav ul li a {
     text-decoration: none;
-    color: var(--black);
-    font-weight: 500;
-    display: inline-block;
+    color: black;
 }
 
 nav ul li a:hover {
-    color: var(--blue);
+    color: royalblue;
 }
 
-.row-1 {
+.container {
+    padding: 0 23px;
+    max-width: 1050px;
+    margin: 0 auto;
+}
+
+/* ---------- HOME ---------- */
+#home {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 147px;
-    margin-bottom: 201px;
-}
-
-.col-1 {
-    flex-basis: 70%;
-    position: relative;
-}
-
-.col-1 h1 {
-    font-size: 49px;
-}
-
-.col-1 h3 {
-    font-size: 24px;
-    margin-top: 3px;
-    line-height: 1.32;
-}
-
-.col-1 p {
-    font-size: 16px;
-    color: #b7b7b7;
-    font-weight: 100;
-}
-
-.col-1 h4 {
-    margin: 30px 0;
-    font-size: 20px;
-}
-
-button {
-    width: 140px;
-    border: 0;
-    padding: 12px 10px;
-    outline: none;
-    color: #fff;
-    background: linear-gradient(to right, #fb5283, #ff3527);
-    border-radius: 6px;
-    cursor: pointer;
-    transition: 0.5s;
-}
-
-button img {
-    width: 30px;
-    display: none;
-}
-
-button:hover img {
-    display: block;
-}
-
-button:hover {
-    width: 160px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.col-2 {
-    position: relative;
-    flex-basis: 30%;
-    display: flex;
-    align-items: center;
-}
-
-.col-2 .controller {
-    width: 90%;
-}
-
-.color-box {
-    position: absolute;
-    right: 0;
-    top: 0;
-    background: linear-gradient(#ff54a2, #ff575a);
-    border-radius: 20px 0 0 20px;
-    height: 100%;
-    width: 80%;
-    z-index: -1;
-    transform: translateX(150px);
-}
-
-.add-btn img {
-    width: 35px;
-    margin-bottom: 5px;
-}
-
-.add-btn {
-    text-align: center;
-    color: #fff;
-    cursor: pointer;
-}
-
-.row-2 {
-    margin-bottom: 70px;
-}
-
-.row-2 h2 {
-    font-size: 30px;
-    margin-bottom: 25px;
-}
-
-.row-2 h3 {
-    font-size: 24px;
-    margin-bottom: 8px;
-}
-
-.row-2 h6 {
-    font-size: 12px;
-    font-weight: 400;
-}
-
-.row-2 a {
-    text-decoration: none;
-    color: #000;
-}
-
-.row-2 a:hover {
-    color: var(--blue);
-}
-
-.social-links img {
-    height: 13px;
-    margin: 20px;
-    cursor: pointer;
-}
-
-.social-links {
-    text-align: center;
-}
-
-.footer {
-    background: var(--lightgray);
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
 }
 
-.footer p {
-    font-size: 16px;
-    color: var(--darkgray);
+#home .hero {
+    height: 400px;
+    display: flex; /* Change to FLEX */
+    flex-direction: column;
+    justify-content: center;
+    line-height: 1.35; /* OPT */
 }
 
-.footer a {
-    color: var(--black);
-    text-decoration: none;
+#home .hero .title {
+    font-size: 3rem;
 }
 
-.footer a:hover {
-    color: var(--blue);
-}
-
-.socials {
-    display: flex;
-    align-items: center;
+#home .preview {
+    height: 250px;
+    display: flex; /* Change to FLEX */
+    flex-direction: column;
     justify-content: center;
 }
 
-.socials li {
+#home .preview .title {
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+}
+
+#home .preview p {
+    margin-top: 5px;
+    font-size: 0.8rem;
+}
+
+#home .preview a {
+    text-decoration: none;
+    color: black;
+}
+
+#home .preview a:hover {
+    color: royalblue;
+}
+
+/* ---------- ABOUT ---------- */
+#about {
+    display: none; /* Change to FLEX */
+    flex-direction: column;
+}
+
+#about .top {
+    height: 410px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#about .top .title {
+    font-size: 3rem;
+    margin-bottom: 30px;
+}
+
+#about .content {
+    display: flex;
+    justify-content: space-between;
+}
+
+#about .text {
+    flex-basis: 63%;
+}
+
+#about .text p {
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+#about .image {
+    flex-basis: 33%;
+    margin: auto 0;
+}
+
+#about img {
+    width: 100%;
+    border-radius: 3%;
+}
+
+#about .bottom {
+    display: flex;
+    flex-direction: column;
+    height: 260px;
+    justify-content: center;
+}
+#about .bottom .title {
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+}
+
+#about .bottom ul {
+    list-style: inside;
+    line-height: 1.5;
+    /* Make Column to Three */
+    -ms-column-count: 3;
+    -o-column-count: 3;
+    -moz-column-count: 3;
+    -khtml-column-count: 3;
+    column-count: 3;
+}
+
+/* Projects */
+#projects {
+    display: none;
+    justify-content: center;
+    height: 50vh;
+    align-items: center;
+}
+
+#projects h1 {
+    font-size: 3rem;
+    text-align: center;
+}
+
+/* Uses */
+#uses {
+    display: none;
+    justify-content: center;
+    height: 50vh;
+    align-items: center;
+}
+
+#uses h1 {
+    font-size: 3rem;
+    text-align: center;
+}
+
+/* Footer */
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 200px;
+    justify-content: center;
+    color: darkslategray;
+    background-color: ghostwhite;
+}
+
+footer ul {
+    display: flex;
+    width: 125px;
+    justify-content: space-between;
     list-style: none;
-    margin: 0px 8px 25px;
-    font-size: 21px;
+    margin-bottom: 25px;
 }
 
-.socials a {
-    color: var(--darkgray);
+footer ul li a {
+    text-decoration: none;
+    font-size: 20px;
+    color: darkslategray;
 }
 
-.socials a:hover {
-    color: var(--blue);
+footer ul li a:hover {
+    color: royalblue;
 }
 
-@media only screen and (max-width: 700px) {
-    nav ul {
-        width: 100%;
-        background: var(--white);
-        position: absolute;
-        top: 75px;
-        right: 0;
-        z-index: 2;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
+footer a {
+    text-decoration: none;
+    color: darkslategray;
+}
 
-    nav ul li {
-        /* display: block; */
-        margin: 13px 1.4rem;
-    }
-
-    .menu-icon {
-        display: block;
-    }
-
-    #menuList {
-        overflow: hidden;
-        transition: 0.5s;
-    }
-
-    .row-1 {
-        flex-direction: column-reverse;
-        margin-top: 65px;
-        margin-bottom: 113px;
-    }
-
-    .col-2 {
-        flex-basis: 100%;
-        /* margin-bottom: 50px; */
-    }
-
-    .col-2 .controller {
-        width: 77%;
-    }
-
-    .color-box {
-        transform: translateX(75px);
-    }
-
-    .col-1 {
-        flex-basis: 100%;
-    }
-
-    .col-1 h1 {
-        font-size: 30px;
-    }
-
-    .col-1 h3 {
-        font-size: 20px;
-        margin-top: 7px;
-        line-height: 1.77rem;
-    }
-
-    .row-2 h2 {
-        font-size: 25px;
-        margin-bottom: 25px;
-    }
-
-    .row-2 h3 {
-        font-size: 20px;
-        line-height: 1.4;
-        margin-bottom: 6px;
-    }
+footer a:hover {
+    color: royalblue;
 }
